# lifewell-test

./: Makefile  Readme.md  challenge.md  equations.py  exceptions.py  main.py  metric_aggregation.py  pyproject.toml  requirements.txt  test_cases.py  value_objects.py
src/tests/: test_cases.py
src/zurich_test/: equations.py  main.py  metric_aggregation.py  value_objects.py
