[tool.poetry]
name = "zurich-test"
version = "0.1.0"
description = ""
authors = ["Julio Perdiguer <julio.perdiguer.extern@internetstores.com>"]
readme = "README.md"
include = ["*.py"]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.11.0"
mypy = "^1.7.0"
pytest = "^7.4.3"

[tool.poetry.scripts]
run-main = "zurich_test.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
include = ["src"]